# openvr_fsr_app

./: .env  .env.development  .env.production  .gitignore  Pipfile  README.md  build.py  license.txt  openvr_fsr_app.py  openvr_fsr_app.spec  openvr_fsr_app_win64_setup.iss  package-lock.json  package.json  pyproject.toml  run.py  vue.config.js
app/: __init__.py  app_event_loop.py  app_fn.py  app_main.py  app_settings.py  events.py  foveated_cfg.py  foveated_mod.py  fsr.py  fsr_cfg.py  fsr_mod.py  globals.py  log.py  manifest_worker.py  openvr_mod.py  openvr_mod_cfg.py  runasadmin.py  start.py  utils.py  vrperfkit_cfg.py  vrperfkit_mod.py
app/cfg/: __init__.py  base_mod_cfg.py  cfg_file_handler.py  foveated_cfg.py  fsr_cfg.py  openvr_mod_cfg.py  vrperfkit_cfg.py  vrperfkit_rsf_cfg.py
app/mod/: __init__.py  base_mod.py  base_mod_type.py  foveated_mod.py  fsr_mod.py  mod_utils.py  openvr_mod.py  vrperfkit_mod.py  vrperfkit_rsf_mod.py
app/util/: custom_app.py  knownpaths.py  manifest_worker.py  scan_app_lib.py  utils.py
app/valve/: acf.py  steam.py
data/openvr_foveated/: README.md  openvr_mod.cfg
data/openvr_fsr/: openvr_mod.cfg
data/vrperfkit/: vrperfkit_RSF.yml
public/: index.html
src/: App.vue  main.js
src/assets/: main.css
src/components/: DirManager.vue  EntryDetails.vue  Footer.vue  LanguageSwitcher.vue  Main.vue  Setting.vue  SteamLibTable.vue  Updater.vue
src/lang/: index.js
tests/: conftest.py
tests/test_app/: _test_vrperfkit_mod.py  test_app_fn.py  test_custom_dir.py  test_mod.py  test_mod_utils.py  test_openvr_mod.py  test_steamlib.py  (+2 more)
(+10 files in other folders)
