[tool.poetry]
name = "vr mod app"
version = "0.9.91"
description = "Management Gui for OpenVR FSR PlugIn"
authors = ["tappi287 <tapper.stefan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Eel = "^0.16.0"
# Bottle >0.13 does not overwrite sys.stdout/stderr so it is compatible with PyInstaller
bottle = {file = "./local_pkgs/bottle-0.13.dev0.tar.gz"}
appdirs = "^1.4.4"
gevent = "^24.2.1"
python-a2s = "^1.3.0"
"ruamel.yaml" = "^0.18.6"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.4.0"
pytest = "^8.0.1"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
